# minja

./: CMakeLists.txt
examples/: chat-template.cpp  raw.cpp
include/minja/: chat-template.hpp  minja.hpp  minja_schema.fbs
src/: minja_serialization.cpp
tests/: test-capabilities.cpp  test-chat-template.cpp  test-fuzz.cpp  test-polyfills.cpp  test-supported-template.cpp  test-syntax.cpp
